--- a/CryoconM14App/Db/M14_system.template
+++ b/CryoconM14App/Db/M14_system.template
@@ -48,7 +48,7 @@ record(stringin, "$(device):MAC") {
 }
 
 record(stringout, "$(device):RESEED") {
-  field(DESC, "Set System Time")
+  field(DESC, "Reseed Ave Filter")
   field(DTYP, "stream")
   field(OUT, "@M14.protocol reseed $(port)")
 }
