--- a/CryoconM14App/Db/M14_system.template
+++ b/CryoconM14App/Db/M14_system.template
@@ -5,49 +5,49 @@
 #! DBDEND
 
 
-record(stringin, "$(device):DATE") {
+record(stringin, "$(tmon):DATE") {
   field(DESC, "System Date")
   field(DTYP, "stream")
   field(INP, "@M14.protocol date $(port)")
   field(PINI, "YES")
 }
 
-record(stringout, "$(device):SET:DATE") {
+record(stringout, "$(tmon):SET:DATE") {
   field(DESC, "Set System Date")
   field(DTYP, "stream")
   field(OUT, "@M14.protocol setdate $(port)")
-  field(FLNK, "$(device):DATE")
+  field(FLNK, "$(tmon):DATE")
 }
 
-record(stringin, "$(device):TIME") {
+record(stringin, "$(tmon):TIME") {
   field(DESC, "System Time")
   field(DTYP, "stream")
   field(INP, "@M14.protocol time $(port)")
   field(PINI, "YES")
 }
 
-record(stringout, "$(device):SET:TIME") {
+record(stringout, "$(tmon):SET:TIME") {
   field(DESC, "Set System Time")
   field(DTYP, "stream")
   field(OUT, "@M14.protocol settime $(port)")
-  field(FLNK, "$(device):TIME")
+  field(FLNK, "$(tmon):TIME")
 }
 
-record(stringin, "$(device):IPAD") {
+record(stringin, "$(tmon):IPAD") {
   field(DESC, "IP Address")
   field(DTYP, "stream")
   field(INP, "@M14.protocol ipaddress $(port)")
   field(PINI, "YES")
 }
 
-record(stringin, "$(device):MAC") {
+record(stringin, "$(tmon):MAC") {
   field(DESC, "MAC Address")
   field(DTYP, "stream")
   field(INP, "@M14.protocol macaddress $(port)")
   field(PINI, "YES")
 }
 
-record(stringout, "$(device):RESEED") {
+record(stringout, "$(tmon):RESEED") {
   field(DESC, "Reseed Ave Filter")
   field(DTYP, "stream")
   field(OUT, "@M14.protocol reseed $(port)")
@@ -55,14 +55,14 @@ record(stringout, "$(device):RESEED") {
 
 #! Further lines contain data used by VisualDCT
 #! View(0,0,1.0)
-#! Record("$(device):DATE",300,8,0,0,"$(device):DATE")
-#! Record("$(device):SET:DATE",40,8,0,0,"$(device):SET:DATE")
-#! Field("$(device):SET:DATE.FLNK",16777215,1,"$(device):SET:DATE.FLNK")
-#! Link("$(device):SET:DATE.FLNK","$(device):DATE")
-#! Record("$(device):TIME",300,148,0,0,"$(device):TIME")
-#! Record("$(device):SET:TIME",40,148,0,0,"$(device):SET:TIME")
-#! Field("$(device):SET:TIME.FLNK",16777215,1,"$(device):SET:TIME.FLNK")
-#! Link("$(device):SET:TIME.FLNK","$(device):TIME")
-#! Record("$(device):IPAD",40,288,0,0,"$(device):IPAD")
-#! Record("$(device):MAC",300,288,0,0,"$(device):MAC")
-#! Record("$(device):RESEED",40,422,0,1,"$(device):RESEED")
+#! Record("$(tmon):DATE",300,8,0,0,"$(tmon):DATE")
+#! Record("$(tmon):SET:DATE",40,8,0,0,"$(tmon):SET:DATE")
+#! Field("$(tmon):SET:DATE.FLNK",16777215,1,"$(tmon):SET:DATE.FLNK")
+#! Link("$(tmon):SET:DATE.FLNK","$(tmon):DATE")
+#! Record("$(tmon):TIME",300,148,0,0,"$(tmon):TIME")
+#! Record("$(tmon):SET:TIME",40,148,0,0,"$(tmon):SET:TIME")
+#! Field("$(tmon):SET:TIME.FLNK",16777215,1,"$(tmon):SET:TIME.FLNK")
+#! Link("$(tmon):SET:TIME.FLNK","$(tmon):TIME")
+#! Record("$(tmon):IPAD",40,288,0,0,"$(tmon):IPAD")
+#! Record("$(tmon):MAC",300,288,0,0,"$(tmon):MAC")
+#! Record("$(tmon):RESEED",40,422,0,1,"$(tmon):RESEED")
