Adding gda tags to the M14_sensor template.

--- a/CryoconM14App/Db/M14_sensor.template
+++ b/CryoconM14App/Db/M14_sensor.template
@@ -4,6 +4,7 @@
 #! DBD("/dls_sw/prod/R3.14.8.2/support/streamDevice/2-3dls6/dbd/stream.dbd")
 #! DBDEND
 
+# %gdatag,template,simplePv,$(gda_name).$(record),$(gda_desc)
 
 record(ai, "$(tmon):$(sensor):RAW") {
   field(DESC, "Raw Sensor Reading")
@@ -17,6 +18,7 @@ record(ai, "$(tmon):$(sensor):RAW") {
 }
 
 # % archiver 10 Monitor
+# %gdatag,pv,ro,$(gda_name).$(record),RECORD,Sensor temperature
 record(ai, "$(device):$(record)") {
   field(DESC, "Sensor Temperature")
   field(DTYP, "stream")
